--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "proto-mock",
-  "version": "0.3.0",
+  "version": "0.3.2",
   "description": "根据proto文件定义，mock对应的json数据",
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "prepublishOnly": "npm run build && npm run clean",
+    "prepublishOnly": "npm run build",
     "clean": "tsc --build --clean"
   },
   "repository": {
@@ -29,7 +29,8 @@
     "protobufjs-cli": "^1.1.1"
   },
   "files": [
-    "/**/*.js",
-    "/**/*.d.ts"
+    "index.js",
+    "index.d.ts",
+    "utils"
   ]
 }
