--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "proto-mock",
-  "version": "0.4.0",
+  "version": "1.0.0",
   "description": "根据proto文件定义，mock对应的json数据",
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "clean": "tsc --build --clean",
     "prepublishOnly": "npm run build",
-    "postpublish": "npm run clean"
+    "postpublish": "npm run clean",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
   "homepage": "https://github.com/sullay/proto-mock#readme",
   "devDependencies": {
     "@types/node": "^18.15.11",
+    "jest": "^29.5.0",
+    "proto-mock": "^0.4.0",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
