--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jest": "^29.5.0",
     "proto-mock": "^0.4.0",
     "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
